PROTON-1224: rework loading of bouncycastle to ensure failure is detected, but suppressed since its optional, and actually reported at the point usage would fail. Fix up various whitespace etc issues.